--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <section id="logo">
-            logo
+            Logo
         </section>
         <section id="title">
             <h1>Bem-Vindo</h1>
